# tobesim

./: README.md
catkin_ws/src/tobe_control/: CMakeLists.txt  package.xml
catkin_ws/src/tobe_control/config/: tobe_control.yaml
catkin_ws/src/tobe_control/launch/: tobe_control.launch
catkin_ws/src/tobe_description/: CMakeLists.txt  README.md  gazebo.xacro  humanoid_with_ankles2.xml  package.xml  std_parts.xacro  tobe.urdf  tobe.xacro
catkin_ws/src/tobe_description/inertia/: Hips.xacro  upperleg.xacro
catkin_ws/src/tobe_description/launch/: rviz.launch
catkin_ws/src/tobe_description/models/high_friction_ground_plane/: model.config  model.sdf
catkin_ws/src/tobe_description/models/tobe_robot/: model.config  tobe.urdf
catkin_ws/src/tobe_description/world/: tobe_world.world
catkin_ws/src/tobe_gazebo/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/tobe_gazebo/launch/: tobe_gazebo.launch  tobe_reset_world.launch  tobe_setup.launch
catkin_ws/src/tobe_gazebo/scripts/: data_output.py  model_setup.py  randomize_force.py  realtime_plot.py  tobe_demo.py  tobe_move.py  tobe_reset.py  tobe_walker.py
catkin_ws/src/tobe_gazebo/src/tobe_gazebo/: stand.py  tobe.py  walker.py
